# pygame-calculator-app

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE.md  README.md  TASKS.md  calculator.py  calculator_engine.py  config.py  pyproject.toml  test_calculator.py  ui_components.py
.github/workflows/: tests.yml
